--- a/readme
+++ b/readme
@@ -1,4 +1,4 @@
-{ "dados.Controle Target": "2.023.003" } query para mongo
+#{ "dados.Controle Target": "2.023.003" } query para mongo
 
 ### `heroku` to deploy the app
 
@@ -6,9 +6,12 @@ set NODE_OPTIONS=--openssl-legacy-provider
 npm install -g heroku
 heroku --version
 heroku login
-heroku create juritech-data-pilot
+heroku create juritech-data-pilot-backend
 git push heroku main
 heroku restart
-heroku logs --tail --app juritech-data-pilo
+heroku logs --tail --app juritech-data-pilot-backend
+heroku ps:scale web=0 -a juritech-data-pilot-backend
+heroku ps:restart web.1 -a juritech-data-pilot-backend
+heroku restart -a juritech-data-pilot-backend
 
 incluir var ambientes para acessar o banco de dados
